Fixed image carousel on mobile

--- a/src/assets/less/equipment.less
+++ b/src/assets/less/equipment.less
@@ -592,6 +592,7 @@
             right: 1.5rem;
             bottom: 1.5rem;
             z-index: 10;
+            display: none;
         }
 
         .cs-h3 {
@@ -659,6 +660,7 @@
         }
 
         .cs-hover-box {
+            display: flex;
             height: auto;
             opacity: 0;
             top: 1.5rem;
